--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./fontawesome-free-5.15.3-web/css/all.css">
+    <link rel="stylesheet" href="./fontawesome-free-5.15.3-web/css/all.min.css">
 
 </head>
 
@@ -25,10 +25,10 @@
                         <li class="header__list-item">Contact</li>
                     </ul>
                     <img src="./images/logo.png" alt="" class="header-image">
-                    <ul class="header__nav-list">
-                        <img src="./images/ant-design_twitter-outlined.png" alt="" class="header__list-image">
-                        <img src="./images/ant-design_facebook-filled.png" alt="" class="header__list-image">
-                        <img src="./images/ant-design_linkedin-filled.png" alt="" class="header__list-image">
+                    <ul class="header__list--icon">
+                        <i class="fab fa-twitter-square"></i>
+                        <i class="fab fa-facebook-square"></i>
+                        <i class="fab fa-instagram-square"></i>
                     </ul>
                 </div>
                 <div class="background-text">
@@ -158,8 +158,116 @@
                     <a href="#" class="button button--primary">More Testimonials</a>
                 </div>
             </div>
-
         </section>
+
+
+        <div class="section__contacts">
+            <div class="section__contacts--header">
+                <h2 class="contacts--heading">
+                    Contacts Us
+                </h2>
+                <p class="contacts--des">Lorem ipsum dolor sit amet.<span>Consect.Lorem ipsum dolor sit amet, consect.</span></p>
+            </div>
+            <div class="section__containers">
+                <div class="section__left">
+                    <h2 class="left--heading">
+                        Contact Us
+                    </h2>
+                    <input type="text" class="input--contact" placeholder="Your Name">
+                    <input type="text" class="input--contact" placeholder="Your Email">
+                    <input type="text" class="input--contact" placeholder="Your Message">
+                    <div class="contact--btn">
+                        <a href="#" class="button button--primary">Send</a>
+                    </div>
+                </div>
+                <div class="section__right">
+                    <div class="right__header">
+                        <div class="header__contacts">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="header__contact--des">Lorem ipsum cessitatibus<span> totam recusandae mollitia! Est!</span></div>
+                        </div>
+                        <div class="header__contacts">
+                            <i class="fas fa-mobile-alt"></i>
+                            <div class="header__contact--des">123456789</div>
+                        </div>
+                        <div class="header__contacts">
+                            <i class="far fa-envelope"></i>
+                            <div class="header__contact--des">123465789@gmail.com</div>
+                        </div>
+                    </div>
+                    <img src="./images/map screen.png" alt="" class="contacts--image">
+                    <div class="contact__list--icon">
+                        <i class="fab fa-twitter-square"></i>
+                        <i class="fab fa-facebook-square"></i>
+                        <i class="fab fa-instagram-square"></i>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="footer">
+            <div class="footer__list">
+                <div class="footer__list--item">
+                    <h2 class="item--heading">
+                        Page
+                    </h2>
+                    <ul class="item__list">
+                        <li class="item">
+                            <a href="#" class="list">Home</a>
+                            <a href="#" class="list">Product</a>
+                            <a href="#" class="list">Pricing</a>
+                            <a href="#" class="list">About</a>
+                            <a href="#" class="list">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__list--item">
+                    <h2 class="item--heading">
+                        Tomothy
+                    </h2>
+                    <ul class="item__list">
+                        <li class="item">
+                            <a href="#" class="list">Home</a>
+                            <a href="#" class="list">Product</a>
+                            <a href="#" class="list">Pricing</a>
+                            <a href="#" class="list">About</a>
+                            <a href="#" class="list">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__list--item">
+                    <h2 class="item--heading">
+                        Jane Black
+                    </h2>
+                    <ul class="item__list">
+                        <li class="item">
+                            <a href="#" class="list">Home</a>
+                            <a href="#" class="list">Product</a>
+                            <a href="#" class="list">Pricing</a>
+                            <a href="#" class="list">About</a>
+                            <a href="#" class="list">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="section__contact">
+                <div class="contact--list">
+                    <i class="fas fa-map-marker-alt list--icon"></i>
+                    <span class="list--des">6480 Ha Noi Viet Nam</span>
+                </div>
+                <div class="contact--list">
+                    <i class="fas fa-mobile-alt list--icon"></i>
+                    <span class="list--des">(012)3456789</span>
+                </div>
+                <div class="contact__list--icon">
+                    <i class="fab fa-twitter-square"></i>
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-instagram-square"></i>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
