--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         </div>
 
-        <div class="footer">
+        <footer class="footer">
             <div class="footer__list">
                 <div class="footer__list--item">
                     <h2 class="item--heading">
@@ -267,7 +267,7 @@
                     <i class="fab fa-instagram-square"></i>
                 </div>
             </div>
-        </div>
+        </footer>
     </div>
 </body>
 
