--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </section>
 
 
-        <div class="section__contacts">
+        <section class="section__contacts">
             <div class="section__contacts--header">
                 <h2 class="contacts--heading">
                     Contacts Us
@@ -205,7 +205,7 @@
 
             </div>
 
-        </div>
+        </section>
 
         <footer class="footer">
             <div class="footer__list">
