--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="app">
-        <div class="header">
+        <header class="header">
             <div class="background-image">
                 <div class="header__nav">
                     <ul class="header__nav-list">
@@ -38,7 +38,7 @@
                     <div class="button button--primary">Try For Free</div>
                 </div>
             </div>
-        </div>
+        </header>
         <section class="feature">
             <div class="feature-block">
                 <h2 class="block-header">Feature</h2>
