--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 </div>
             </div>
         </header>
+        
         <section class="feature">
             <div class="feature-block">
                 <h2 class="block-header">Feature</h2>
@@ -72,6 +73,7 @@
             </div>
             <img src="./images/img2.png" alt="" class="fastest-image">
         </section>
+
         <section class="lighting">
             <img src="./images/img3.png" alt="" class="lighting-image">
             <div class="lighting-block">
@@ -93,6 +95,7 @@
                 </div>
             </div>
         </section>
+
         <section class="partner">
             <div class="partner-block">
                 <h2 class="partner-title">
@@ -160,7 +163,6 @@
             </div>
         </section>
 
-
         <section class="section__contacts">
             <div class="section__contacts--header">
                 <h2 class="contacts--heading">
@@ -175,7 +177,7 @@
                     </h2>
                     <input type="text" class="input--contact" placeholder="Your Name">
                     <input type="text" class="input--contact" placeholder="Your Email">
-                    <input type="text" class="input--contact" placeholder="Your Message">
+                   <textarea class="input--contact form-contact" placeholder="Your Messenger" ></textarea>
                     <div class="contact--btn">
                         <a href="#" class="button button--primary">Send</a>
                     </div>
